Uniform sizing on Movie posters

--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ body {
     border-radius: 4px;
     overflow: auto;
   }
-
   #results .movies-container .movies {
     display: flex;
     flex-wrap: wrap;
@@ -55,11 +54,12 @@ body {
   
   #results .movies-container .movies li {
     list-style: none;
+    width: 23%;  
     margin: 10px;
     text-align: center;
   }
   
   #results .movies-container .movies li img {
-    width: 200px;
+    width: 100%; 
   }
   
