smaller more uniform search results

--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body {
     margin: 20px 0;
   }
   
-  label {
-    font-weight: bold;
-  }
-  
   input[type="text"] {
     padding: 12px 20px;
     margin: 8px 0;
@@ -39,13 +35,18 @@ body {
     font-size: 16px;
   }
   
-  #search-results {
-    margin: 20px 0;
+  #results {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 600px;
+    margin: 20px auto 0;
     padding: 20px;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    overflow: auto;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 40px auto 20px;
   }
+  
   #results .movies-container .movies {
     display: flex;
     flex-wrap: wrap;
@@ -61,5 +62,7 @@ body {
   
   #results .movies-container .movies li img {
     width: 100%; 
+    height: auto;
+    border-radius: 5px;
   }
   
