--- a/style.css
+++ b/style.css
@@ -1,21 +1,32 @@
+* {
+    box-sizing: border-box;
+  }  
+
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    background-color: #f1f1f1;
   }
   
   h1 {
     text-align: center;
-    margin: 20px 0;
-    color: #333333;
+  margin-bottom: 0.5em;
   }
   
   form {
-    text-align: center;
-    margin: 20px 0;
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #000000
+  border-radius 5px;
   }
   
   input[type="text"] {
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -25,6 +36,7 @@ body {
   }
   
   button[type="submit"] {
+    width: 100%;
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -45,7 +57,7 @@ body {
     background-color: #fff;
     border-radius: 10px;
     margin: 40px auto 20px;
-  }
+}
 
   .movies {
     display: flex;
