--- a/style.css
+++ b/style.css
@@ -133,6 +133,11 @@ h1.results-title {
     text-align: center;
     margin-bottom: 0.5em;
   }
+
+.hidden {
+    display: none;
+  }
+  
   
   .saved-movies-container {
     display: flex;
@@ -177,9 +182,5 @@ h1.results-title {
   font-size: 18px;
 }
 
-.saved-movies {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-}
+
 
